--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Week 5 Assignment</title>
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-    <h1>Week 5 Assignment - Part 2</h1>
-    <p>See console for output.</p>
+    <header>
+      <h1>Week 5 Assignment - Part 2</h1>
+      <h2>John Maras' Record Shop!</h2>
+    </header>
+    <div class="twdy">
+      <h2>THIS WILL DESTROY YOU</h2>
+      <img src="youngmountain.jpeg"></img>
+      <h3>Only $35.00!!!</h3>
+    </div>
+    <main>
+      <p>See console for output.</p>
+    </main>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
